<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Hovanki</string>

  <!-- Common -->
  <string name="action_allow">Allow</string>
  <string name="action_cancel">Cancel</string>
  <string name="action_confirm">Confirm</string>
  <string name="action_dismiss">OK</string>
  <string name="action_leave">Leave</string>
  <string name="action_back">Back</string>
  <string name="action_log_out">Log out</string>
...
